# eina

./: .gitignore  .ruff.toml  Makefile  README.md  docker-compose.yml
.github/scripts/: build_and_push.sh  build_docker.sh
.github/workflows/: deploy.yml  pr-build.yml  pr-lint.yml  pr-server-test.yml
client/: Dockerfile  docker-entrypoint.sh  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
server/: Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
server/src/: app.module.ts
server/src/modules/event/: event.module.ts
server/src/modules/event/application/: container.py  service.py
server/src/modules/event/application/query/: get-event-by-id.handler.ts  get-event-by-id.query.ts
server/src/modules/event/domain/: entity.py  entity.ts  repository.interface.ts  repository.py
server/src/modules/event/gql/: resolvers.ts
server/src/modules/event/infrastructure/: container.py  repository.py  repository.ts
server/src/modules/event/presentation/graphql/: ext.py  query.py
server/src/shared/: settings.py
server/src/shared/application/: query.py  unit_of_work.py
server/src/shared/domain/: entity.py  entity.ts  error.ts  exceptions.py  repository.py  value_objects.py
server/src/shared/infrastructure/: exceptions.py  in-memory.repository.ts  orm.py  repository.py  unit_of_work.py
server/tests/integration/shared/infrastructure/: test_repository.py
server/tests/unit/shared/domain/: test_value_object.py
server/tests/unit/shared/infrastructure/: test_unit_of_work.py
(+29 files in other folders)
